# newspace-hybrid-digital-twin

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  hardening_summary.json  merge_summary.json  pyproject.toml  requirements-dev.txt  requirements.txt  tfreshfoods1@gmail.comjustfreshfoods1@gmail.co
configs/: api.yaml  base.yaml  database.yaml  logging.yaml  paths.yaml  validation_runtime.yaml
dashboard/: app.py
db/: schema.sql
docker/: Dockerfile  docker-compose.yml
docs/: ablation_protocol.md  architecture.md  benchmark_reporting.md  calibration.md  data_contracts.md  error_analysis.md  experiment_protocol.md  master_integration_audit.md  model_comparison.md  production_hardening.md  recommended_data_layout.md  reproducibility.md  synthetic_data_metadata.json  validation_plan.md
scripts/: bootstrap_env.sh  build_alert_layer.py  build_benchmark_assets.py  build_dataset.py  build_features.py  build_optical_features_real.py  build_real_dataset.py  build_risk_layer.py  build_s2_prepost.py  build_temporal_risk_evolution.py  calibrate_model.py  compare_models.py  error_analysis.py  export_severity_predictions.py  generate_decision_outputs.py  generate_dnbr_labels.py  generate_report.py  generate_synthetic_wildfire_case.py  ingest_data.py  preprocess_data.py  quality_gate.sh  run_ablation.py  run_api.py  run_e2e_smoke.py  run_experiment.py  run_inference.py  run_pipeline.py  run_validation_runtime.py  simulate_next_risk_step.py  test_stac.py  train_model.py  update_twin.py  update_twin_example.py
(+172 files in other folders)
